# Protocols

./: .gitignore  README.md
Concrete Efficiency Improvements to Multiparty Garbling with an Honest Majority/: 13aesAllPartiesV12  13aesAllPartiesV13  13aesAllPartiesV14  13aesAllPartiesV2  13aesAllPartiesV23  13shaAllPartiesV10  3aesAllPartiesV0  3aesAllPartiesV12  3aesAllPartiesV13  3aesAllPartiesV14  3aesAllPartiesV15  3aesAllPartiesV2  3aesAllPartiesV20  3aesAllPartiesV22  3aesAllPartiesV9  BMRPassive.out  README.txt
Concrete_Efficiency_Improvements_to_Multiparty_Garbling_with_an_Honest_Majority/: 13aesAllParties  13aesAllPartiesV10  13aesAllPartiesV11  13aesAllPartiesV15  13aesAllPartiesV20  13aesAllPartiesV21  13aesAllPartiesV22  13aesAllPartiesV24  13aesAllPartiesV3  13shaAllParties  13shaAllPartiesV11  3ShaAllPartiesV10  3ShaAllPartiesV11  3ShaAllPartiesV15  3ShaAllPartiesV9  3aesAllPartiesV10  3aesAllPartiesV11  3aesAllPartiesV21  3aesAllPartiesV23  README.txt  build.sh
Efficient_Scalable_Constant-Round_MPC_via_Garbled_Circuits/DDHbasedBMROnline/: 3aesAllParties  CMakeLists.txt  HomOnlineExperiment.sh  HomOnlineTest.out  LICENSE  MPZPrecomputeExp.cpp  MPZPrecomputeExp.h  MPZPrecomputeExp_Sec.cpp  MPZPrecomputeExp_Sec.h  Makefile  NTLWrapper.cpp  NTLWrapper.h  README.txt  ZZPrecomputeExp.cpp  ZZPrecomputeExp.h  ZZPrecomputeExp_Sec.cpp  ZZPrecomputeExp_Sec.h  cmake_install.cmake  homBMR.cpp  homBMR.h  homDefs.h  main.cpp  secCompMultiParty.cpp  secCompMultiParty.h
Efficient_Scalable_Constant-Round_MPC_via_Garbled_Circuits/DDHbasedBMROnline/P500/: 500FakeSha
(+106 files in other folders)
